<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/item_add_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/add_note_icon"
        android:title="Add Note"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/item_delete_all_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/delete_icon"
        android:title="Delete All"
        app:showAsAction="always|withText" />
</menu>